(library
 (public_name ppx_minidebug)
 (name ppx_minidebug)
 (kind ppx_rewriter)
 (modules ppx_minidebug)
 (libraries ppxlib re)
 (ppx_runtime_libraries ppx_minidebug.runtime)
 (preprocess
  (pps ppxlib.metaquot)))

(library
 (public_name ppx_minidebug.runtime)
 (name minidebug_runtime)
 (modules minidebug_runtime)
 (libraries
  printbox
  printbox-text
  printbox-html
  printbox-md
  ptime.clock.os
  re
  sexplib0))

(rule
 (target index.mld)
 (deps README.md)
 (mode (promote (until-clean)))
 (action
  (with-stdout-to
   %{target}
   (run md2mld %{deps}))))

(documentation
 (package ppx_minidebug)
 (mld_files index))

(rule
 (alias upload-doc)
 (deps
  index.mld
  (alias doc))
 (action
  (progn
   (run cp -rf _doc/_html ../../docs/)
   (run git add -A ../../docs)
   (run git commit ../../docs -m "Update generated API docs")
   (run git push origin main))))
