(library
 (public_name ppx_minidebug)
 (name ppx_minidebug)
 (kind ppx_rewriter)
 (modules ppx_minidebug)
 (libraries ppxlib re)
 (ppx_runtime_libraries ppx_minidebug.runtime)
 (preprocess
  (pps ppxlib.metaquot)))

(library
 (public_name ppx_minidebug.runtime)
 (name minidebug_runtime)
 (modules dynarray minidebug_runtime)
 (libraries
  printbox
  printbox-text
  printbox-html
  printbox-md
  ptime.clock.os
  mtime.clock.os
  re
  sexplib0
  threads
  thread-local-storage))

(mdx
 (files README.md doc/index.mld)
 (libraries minidebug_runtime))
