(library
 (public_name ppx_minidebug)
 (name ppx_minidebug)
 (kind ppx_rewriter)
 (modules ppx_minidebug)
 (libraries ppxlib re)
 (ppx_runtime_libraries ppx_minidebug.runtime)
 (preprocess
  (pps ppxlib.metaquot)))

(library
 (public_name ppx_minidebug.runtime)
 (name minidebug_runtime)
 (modules minidebug_runtime)
 (libraries
  printbox
  printbox-text
  printbox-html
  printbox-md
  ptime.clock.os
  mtime.clock.os
  re
  sexplib0
  threads
  thread-local-storage))

(library
 (public_name ppx_minidebug.db)
 (name minidebug_db)
 (modules minidebug_db)
 (libraries
  minidebug_runtime
  sqlite3
  printbox
  printbox-text
  ptime.clock.os
  mtime.clock.os
  sexplib0))

(library
 (public_name ppx_minidebug.client)
 (name minidebug_client)
 (modules minidebug_client)
 (libraries sqlite3 re re.pcre unix notty notty.unix))

(mdx
 (files README.md)
 (libraries minidebug_runtime))
